# CompiladorC-V2

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_error.c  test_error_simple.c  test_exit.txt  test_simple_error.c
Docs/: ANALISADOR_LEXICO.md  ANALISADOR_LEXICO_IMPLEMENTACAO.MD  ANALISADOR_SINTATICO.md  ANALISADOR_SINTATICO_IMPLEMENTACAO.md  ANALISE_PREPROCESSAMENTO_ATUAL.md  ARQUITETURA_TECNICA.md  ESCOPO_IMPLEMENTACAO.md  FASES_COMPILADOR.md  PERFORMANCE_OPTIMIZATIONS.md  PREPROCESSADOR.md  PREPROCESSADOR_ORDEM_IMPLEMENTACAO.MD  PREPROCESSOR_API_DOCUMENTATION.md  PREPROCESSOR_CONFIGURATION.md  PREPROCESSOR_INTEGRATION_GUIDE.md  PREPROCESSOR_USAGE_EXAMPLES.md  PROCESSADOR_SINTATICO.md  PROGRESSO_MARCOS.md  PROJETO_COMPILADOR_STATUS.md  README.md
src/: integrated_error_handler.hpp  lexer_preprocessor_bridge.cpp  lexer_preprocessor_bridge.hpp  main.cpp  main_parser_only.cpp  (+1 more)
src/lexer/: CMakeLists.txt  README.md
src/lexer/data/: escape_sequences.txt  operators.txt
src/lexer/data/keywords/: c11_keywords.txt  c17_keywords.txt  c23_keywords.txt  c89_keywords.txt  c99_keywords.txt
src/lexer/include/: error_handler.hpp  lexer.hpp  lexer_config.hpp  lexer_logger.hpp  lexer_state.hpp  lookahead_buffer.hpp  symbol_table.hpp  token.hpp
src/lexer/src/: error_handler.cpp  lexer.cpp  lexer_config.cpp  lexer_logger.cpp  lexer_state.cpp  lookahead_buffer.cpp  symbol_table.cpp  token.cpp
src/lexer/tests/: CMakeLists.txt
src/lexer/tests/data/: advanced_program.c  complex_example.c  hello_world.c  simple_program.c
src/lexer/tests/data/invalid_samples/: lexical_errors.c  syntax_errors.c
src/lexer/tests/data/valid_samples/: basic.c  complex.c
src/lexer/tests/data/valid_samples/version_specific/: c99_features.c
src/lexer/tests/integration/: test_c_samples.cpp  test_versions.cpp
src/lexer/tests/unit/: test_advanced_literals.cpp  test_error_recovery.cpp  test_errors.cpp  test_lexer.cpp  test_lexer_config  test_lexer_config.cpp  test_lexer_logger.cpp  test_lexer_phase42.cpp  test_lexer_phase53.cpp  test_lookahead_buffer.cpp  test_states.cpp  test_symbol_table.cpp  test_token.cpp
src/parser/: CMakeLists.txt  parser_state.cpp  test_ast  test_ast_node  test_parser_config
src/parser/data/: error_messages.txt  precedence.txt
src/parser/data/grammar/: c11.grammar  c17.grammar  c17_grammar.txt  c23.grammar  c89.grammar  c89_grammar_old.txt  c99_grammar.txt  minimal_test.grammar  simple_c.grammar
src/parser/include/: ast.hpp  ast_printer.hpp  error_recovery.hpp  grammar.hpp  incremental_parser.hpp  memory_pool.hpp  parser.hpp  parser_config.hpp  parser_logger.hpp  parser_profiler.hpp  parser_state.hpp  parser_types.hpp  token_stream.hpp
src/parser/src/: ast.cpp  ast_printer.cpp  error_recovery.cpp  grammar.cpp  incremental_parser.cpp  parser.cpp  parser_config.cpp  parser_logger.cpp  parser_profiler.cpp  parser_state.cpp  token_stream.cpp
src/parser/tests/: test_parser_config.cpp  test_parser_logger.cpp  test_parser_state_unit.cpp
src/parser/tests/data/invalid/: complex_errors.c  missing_semicolon.c  unmatched_braces.c
src/parser/tests/data/valid/: complex_statements.c  edge_cases.c  simple_function.c  struct_declaration.c
src/parser/tests/integration/: test_parser_integration.cpp
src/parser/tests/unit/: test_ast.cpp  test_ast_node.cpp  test_error_recovery.cpp  test_grammar.cpp  test_parser.cpp  test_parser_comprehensive.cpp  test_parser_config.cpp  test_parser_declarations.cpp  test_parser_expressions.cpp  test_parser_logger.cpp  test_parser_state.cpp  test_parser_statements.cpp  test_parser_types.cpp  test_precedence_associativity.cpp
src/preprocessor/: CMakeLists.txt  test_directive_processor_phase4_1  test_expression_evaluator  test_expression_evaluator_advanced  test_new_methods
src/preprocessor/data/: predefined_macros.txt  system_headers.txt
src/preprocessor/data/directives/: c11_directives.txt  c17_directives.txt  c23_directives.txt  c89_directives.txt  c99_directives.txt
src/preprocessor/include/: conditional_processor.hpp  directive.hpp  expression_evaluator.hpp  file_manager.hpp  macro_processor.hpp  preprocessor.hpp  preprocessor_config.hpp  preprocessor_lexer_interface.hpp  preprocessor_logger.hpp  preprocessor_state.hpp  preprocessor_types.hpp
src/preprocessor/logs/: preprocessor_20250824_180957.log.compressed  preprocessor_20250824_181037.log.compressed  preprocessor_20250824_181118.log.compressed  preprocessor_20250824_181134.log.compressed
src/preprocessor/src/: conditional_processor.cpp  directive.cpp  expression_evaluator.cpp  file_manager.cpp  macro_processor.cpp  preprocessor.cpp  preprocessor_config.cpp  preprocessor_lexer_interface.cpp  preprocessor_logger.cpp  preprocessor_state.cpp
src/preprocessor/tests/: CMakeLists.txt
src/preprocessor/tests/data/invalid_samples/: invalid_directive.c  invalid_macro.c
src/preprocessor/tests/data/valid_samples/: conditional_example.c  custom_header.h  include_example.c  simple_macro.c
src/preprocessor/tests/data/valid_samples/version_specific/: c11_example.c  c99_example.c
src/preprocessor/tests/integration/: CMakeLists.txt  test_end_to_end_pipeline.cpp  test_integration.cpp  test_lexer_integration.cpp  test_lexer_preprocessor_integration.cpp  test_position_mapping.cpp
src/preprocessor/tests/unit/: test_config.cpp  test_debug_comprehensive.cpp  test_directive.cpp  test_directive_comprehensive.cpp  test_directive_processor_phase4_1.cpp  test_exact_utility.cpp  test_expression_comprehensive.cpp  test_expression_evaluator.cpp  test_expression_evaluator_advanced.cpp  test_expression_macro_integration.cpp  test_file_manager.cpp  test_global_debug.cpp  test_includes.cpp  test_logger.cpp  test_macro_comprehensive.cpp  test_macro_processor.cpp  test_new_methods.cpp  test_optimization_comprehensive.cpp  test_performance_comprehensive.cpp  test_preprocessor.cpp  test_preprocessor_main.cpp  test_sequence_debug.cpp  test_simple_debug.cpp  test_state.cpp  test_stringification_concatenation.cpp  test_system_comprehensive.cpp  test_utility_comprehensive.cpp  test_utility_debug.cpp
(+55 files in other folders)
